--- a/lobster-api/package.json
+++ b/lobster-api/package.json
@@ -4,7 +4,7 @@
   "description": "Lobster NFT API endpoint",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "greenlock-express": "^4.0.3",
     "sqlite3": "^5.0.2"
   }
 }
