add www.lobsternft.io to greenlock.d config

--- a/lobster-api/config/greenlock.d/config.json
+++ b/lobster-api/config/greenlock.d/config.json
@@ -21,6 +21,13 @@
         "lobsternft.io"
       ],
       "renewAt": 1
+    },
+    {
+      "subject": "www.lobsternft.io",
+      "altnames": [
+        "www.lobsternft.io"
+      ],
+      "renewAt": 1
     }
   ]
 }
